--- a/Rolling Sun API.csproj
+++ b/Rolling Sun API.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>RollingSun</RootNamespace>
+    <RootNamespace>RollingSun_API</RootNamespace>
   </PropertyGroup>
 
 </Project>
